# spacedig

./: README.md  pyproject.toml
src/spacedig/: __init__.py  cli.py  diff.py  report.py  scanner.py  schedule.py  snapshot.py  store.py
tests/: test_diff.py  test_scanner.py  test_snapshot.py  test_store_report.py
